--- a/src/components/signup/signup.css
+++ b/src/components/signup/signup.css
@@ -122,8 +122,10 @@
   height: 45px;
 }
 .input1 {
-  background-color: black;
+  
   border: transparent;
+ background-color: black;
+ color:#999;
 
 }
 
