changed selector to .nav-menu.active

--- a/src/App.css
+++ b/src/App.css
@@ -569,7 +569,7 @@ footer {
     justify-content: center;
     align-items: center;
   }
-  .nav-menu:active {
+  .nav-menu.active {
     background: rgb(22, 21, 21);
     left: 0px;
     opacity: 1;
