--- a/src/components/Landingpage/LandingPage.css
+++ b/src/components/Landingpage/LandingPage.css
@@ -1,6 +1,3 @@
-/* html {
-  font-size: 16px !important;
-} */
 .landing_container {
     display: flex;
     flex-direction: row;
@@ -55,6 +52,9 @@
 @media screen and (max-width: 600px) {
   .image_sideyy {
     display: none;
+  }  
+  html {
+    font-size: 16px !important;
   }
 }
 
