--- a/src/App.css
+++ b/src/App.css
@@ -544,7 +544,12 @@ footer {
 }
 
  
-
+.wlcm_dark{
+  background-color: black;
+}
+.wlcm_light{
+  background-color: white;
+}
 @media screen and (max-width: 960px) {
   .nav-menu {
     margin: 0px;
