--- a/src/components/messages/Messages.css
+++ b/src/components/messages/Messages.css
@@ -1,5 +1,8 @@
-/*NEW*/
+@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
 
+* {
+  font-family: "Poppins", sans-serif;
+}
 .msgs {
   background: linear-gradient(
     to bottom,
@@ -19,11 +22,12 @@
   font-weight: bold;
   font-size: 2rem;
   word-wrap: break-word;
+  background-color: #0b81ff !important;
 }
 
 .msgs:hover {
   box-shadow: 0px 0px 20px rgb(245, 125, 143);
-}
+} 
 
 .sender {
   font-family: "Fjord One", serif;
@@ -73,4 +77,4 @@
 }
 .read-or-hide:hover {
   color: rgb(50, 50, 150);
-}
+} 
